[package]
name = "chazzinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.2.2"
rusqlite = "0.27.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
toml = "0.5.9"
dotenv = "0.15.0"
serde = "1.0.137"